# vst3-study

./: .gitignore  CMakeLists.txt  README.md
cmake/toolchains/: mingw-w64-x86_64.cmake
plugin/: CMakeLists.txt  controller.cpp  controller.h  entry.cpp  pluginids.h  processor.cpp  processor.h
src/: hello.cpp
